--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -10,6 +10,14 @@
   </head>
   <body>
     <h1>Node Express Joke Book</h1>
+    <input id='whoseJoke' placeholder="name">
+    <input id='newJoke' placeholder="joke">
+    <input id='newPunchLine' placeholder="punch line">
+    <button id='newJokeButton'>Click here to add new joke!</button>
+
+
+    <ul id='jokeContainer'>
+    </ul>
 
   </body>
 </html>
